fix: fix layout overflow, sizes/paddings, img alts

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,7 +8,7 @@
   align-items: center;
   text-align: center;
 
-  max-height: 100%;
+  margin-top: var(--py);
   overflow-y: scroll;
 
   color: #ECF0F3;
